<package format="2">
	<name>EngienMgmt</name>
	<version>1.2.4</version>
	<description>
		Control unit for the motors.
	</description>
	<maintainer email="samkar-4@student.ltu.se">PC-EngienMgmt</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
</package>
