<package format="2">
	<name>engine_mgmt</name>
	<version>1.2.4</version>
	<description>
		Control unit for the motors.
	</description>
	<maintainer email="samkar-4@student.ltu.se">PC-engien_mgmt</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>catkin_simple</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
</package>
